--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Portfolio">
 	<meta name="author" content="Burak Erşan">
-	<title>Burak Erşan</title>
+	<title>Burak Erşan | Portfolio</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/theme.css" rel="stylesheet">
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
