--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<h2>About Me</h2>
 				<div class="col-lg-8 col-lg-offset-2">
 					<p>
-						<a href="burakerşanCV.pdf" class="btnghost" target="_blank"><i class="fa fa-download"></i> Resume </a>
+						<a href="https://drive.google.com/file/d/1FBuTa72MpPxf5A78T746XMSpJEvQxd5u/view?usp=sharing" class="btnghost" target="_blank"><i class="fa fa-download"></i> Resume </a>
 					</p>
 					<img src="img/vector.png" alt="me" class="myphoto">
 					<br><br><br>
