--- a/index.html
+++ b/index.html
@@ -155,6 +155,15 @@
 					<p>
 					</p>
 				</div>
+				<div class="col-lg-8 col-lg-offset-2">
+					<p>
+						Information Technologies Intern <br><br> Aegean Region Chamber of Industry - İzmir - 07 October 2024 / 04 November 2024
+						<br><br>
+						During my internship at the Aegean Region Chamber of Industry, I received various training sessions on artificial intelligence technologies, which were a key focus of the company. Throughout this period, I gained both theoretical knowledge and hands-on experience by working on practical applications in the field.
+					</p>
+					<p>
+					</p>
+				</div>
 			</div>
 		</div>
 	</section>
