--- a/index.html
+++ b/index.html
@@ -95,12 +95,8 @@
 					<br><br><br>
 					<h3>Hello Again</h3>
 					<p>
-						As someone constantly striving for self-improvement, I possess developing skills in programming
-						fields and have a broad range of interests. With foundational skills in object-oriented
-						programming languages such as Python, Java, and C#, along with my ability to collaborate
-						effectively in teams, I aim to offer innovative solutions to complex challenges. My goal is to
-						enhance my knowledge and skills in targeted technology sectors, ultimately creating lasting
-						projects.
+I’m a Computer Programming graduate who loves learning something new about technology every day. Exploring new topics, digging deeper, and improving myself in different areas is a real passion for me. I don’t limit myself to a single field – software development, web technologies, cybersecurity, and artificial intelligence are the areas I’m most curious about. Right now, I’m actively working on improving my skills in these fields.
+I’ve built projects using Java, C#, and Python. I’m also developing my skills in web technologies with HTML, CSS, and JavaScript. At the same time, I’m focusing on Linux systems and network security, while exploring machine learning in the field of AI.
 					</p>
 					<br><br>
 					<h4>my hobbies</h4>
