--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
 					<br><br><br>
 					<h3>Hello Again</h3>
 					<p>
-I’m a Computer Programming graduate who loves learning something new about technology every day. Exploring new topics, digging deeper, and improving myself in different areas is a real passion for me. I don’t limit myself to a single field – software development, web technologies, cybersecurity, and artificial intelligence are the areas I’m most curious about. Right now, I’m actively working on improving my skills in these fields.
-I’ve built projects using Java, C#, and Python. I’m also developing my skills in web technologies with HTML, CSS, and JavaScript. At the same time, I’m focusing on Linux systems and network security, while exploring machine learning in the field of AI.
+I have a degree in Computer Programming and am continuing my academic career in the Management Information Systems program. I love learning something new about technology every day. Discovering new topics, delving deeper, and developing myself in different areas is both a passion and a form of entertainment for me. I don't limit myself to a single field; software development, web technologies, cybersecurity, and artificial intelligence are the topics that interest me the most. I am currently actively working and learning in these areas.
+
+I have developed projects using Java, C#, and Python. I am also advancing in web development using HTML, CSS, and JavaScript. On one hand, I am focusing on Linux systems and network security, while on the other, I am developing myself in artificial intelligence and machine learning.
 					</p>
 					<br><br>
 					<h4>my hobbies</h4>
@@ -113,6 +114,9 @@ I’ve built projects using Java, C#, and Python. I’m also developing my skill
 			<div class="row">
 				<h2>Education</h2>
 				<div class="col-lg-8 col-lg-offset-2">
+					<p>
+						Anadolu University <br> Management Information Systems <br> 2025 - ~
+					</p>
 					<p>
 						Izmir University of Economics <br> Computer Programming <br> 2022 - 2024
 					</p>
