--- a/index.html
+++ b/index.html
@@ -240,20 +240,33 @@ I have developed projects using Java, C#, and Python. I am also advancing in web
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Referances</h2>
-				<img src="img/yavuz.png" alt="Yavuz Aydın" class="refP">
-				<p>
-				<h5>Yavuz Aydın</h5><b>Technical Manager (İndas)</b><br><a href="tel:05414599903"
-					class="confirm-call"><p><em>0541 459 99 03</em></p></a><br><br><br></p>
-				<img src="img/turgay.png" alt="Turgay Zülam" class="refP">
-				<p>
-				<h5>Turgay Zülam</h5><b>Lecturer (IUE)</b><br><a href="tel:05452553822" class="confirm-call"><p><em>0545 255 38
-					22</em></p></a><br><br><br>
-				</p>
-				<img src="img/huseyin.png" alt="Hüseyin Tokat" class="refP">
-				<p>
-				<h5>Hüseyin Tokat</h5><b>Lecturer (IEU)</b><br><a href="tel:05443649198" class="confirm-call"><p><em>0544 364
-					91 98</em></p></a>
-				</p>
+<img src="img/yavuz.png" alt="Yavuz Aydın" class="refP">
+<p>
+  <h5>Yavuz Aydın</h5>
+  <b>Technical Manager (İndas)</b><br>
+  <a href="https://www.linkedin.com/in/yavuzaydin35/" target="_blank" class="confirm-call">
+    <em>LinkedIn</em>
+  </a><br><br><br>
+</p>
+
+<img src="img/turgay.png" alt="Turgay Zülam" class="refP">
+<p>
+  <h5>Turgay Zülam</h5>
+  <b>Lecturer (IUE)</b><br>
+  <a href="https://www.linkedin.com/in/turgay-zülam-600b322a1/" target="_blank" class="confirm-call">
+    <em>LinkedIn</em>
+  </a><br><br><br>
+</p>
+
+<img src="img/huseyin.png" alt="Hüseyin Tokat" class="refP">
+<p>
+  <h5>Hüseyin Tokat</h5>
+  <b>Lecturer (IEU)</b><br>
+  <a href="https://www.linkedin.com/in/hüseyin-tokat-6682a012a/" target="_blank" class="confirm-call">
+    <em>LinkedIn</em>
+  </a>
+</p>
+
 			</div>
 		</div>
 	</div>
