--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<h2>About Me</h2>
 				<div class="col-lg-8 col-lg-offset-2">
 					<p>
-						<a href="https://drive.google.com/file/d/1MWv_yIT1iUTR_JgDVFFfyIJjSsfcvmhy/view?usp=sharing" class="btnghost" target="_blank"><i class="fa fa-download"></i> Resume </a>
+						<a href="https://drive.google.com/file/d/1zgAmT8mb0D6c02JCFE4QJe3Nbij9_oRK/view?usp=sharing" class="btnghost" target="_blank"><i class="fa fa-download"></i> Resume </a>
 					</p>
 					<img src="img/vector.png" alt="me" class="myphoto">
 					<br><br><br>
@@ -245,7 +245,7 @@ I have developed projects using Java, C#, and Python. I am also advancing in web
   <h5>Yavuz Aydın</h5>
   <b>Technical Manager (İndas)</b><br>
   <a href="https://www.linkedin.com/in/yavuzaydin35/" target="_blank" class="confirm-call">
-    <em>LinkedIn</em>
+    <em id="git">LinkedIn</em>
   </a><br><br><br>
 </p>
 
@@ -254,7 +254,7 @@ I have developed projects using Java, C#, and Python. I am also advancing in web
   <h5>Turgay Zülam</h5>
   <b>Lecturer (IUE)</b><br>
   <a href="https://www.linkedin.com/in/turgay-zülam-600b322a1/" target="_blank" class="confirm-call">
-    <em>LinkedIn</em>
+    <em id="git">LinkedIn</em>
   </a><br><br><br>
 </p>
 
@@ -263,7 +263,7 @@ I have developed projects using Java, C#, and Python. I am also advancing in web
   <h5>Hüseyin Tokat</h5>
   <b>Lecturer (IEU)</b><br>
   <a href="https://www.linkedin.com/in/hüseyin-tokat-6682a012a/" target="_blank" class="confirm-call">
-    <em>LinkedIn</em>
+    <em id="git">LinkedIn</em>
   </a>
 </p>
 
@@ -274,7 +274,7 @@ I have developed projects using Java, C#, and Python. I am also advancing in web
 <!-- Footer -->
 <footer>
 	<div class="container text-center">
-		<em class="credits">I will always improve myself
+		<em class="credits">Thank you for your time and attention.
 		</em>
 		<br><br>
 		<i>
