--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@ I have developed projects using Java, C#, and Python. I am also advancing in web
 <p>
   <h5>Yavuz Aydın</h5>
   <b>Technical Manager (İndas)</b><br>
-  <a href="https://www.linkedin.com/in/yavuzaydin35/" target="_blank" class="confirm-call">
+  <a href="https://www.linkedin.com/in/yavuzaydin35/" target="_blank">
+	  <br>
     <em id="git">LinkedIn</em>
   </a><br><br><br>
 </p>
@@ -253,7 +254,8 @@ I have developed projects using Java, C#, and Python. I am also advancing in web
 <p>
   <h5>Turgay Zülam</h5>
   <b>Lecturer (IUE)</b><br>
-  <a href="https://www.linkedin.com/in/turgay-zülam-600b322a1/" target="_blank" class="confirm-call">
+  <a href="https://www.linkedin.com/in/turgay-zülam-600b322a1/" target="_blank">
+	  <br>
     <em id="git">LinkedIn</em>
   </a><br><br><br>
 </p>
@@ -262,7 +264,8 @@ I have developed projects using Java, C#, and Python. I am also advancing in web
 <p>
   <h5>Hüseyin Tokat</h5>
   <b>Lecturer (IEU)</b><br>
-  <a href="https://www.linkedin.com/in/hüseyin-tokat-6682a012a/" target="_blank" class="confirm-call">
+  <a href="https://www.linkedin.com/in/hüseyin-tokat-6682a012a/" target="_blank">
+	  <br>
     <em id="git">LinkedIn</em>
   </a>
 </p>
