--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ I have developed projects using Java, C#, and Python. I am also advancing in web
   <b>Technical Manager (İndas)</b><br>
   <a href="https://www.linkedin.com/in/yavuzaydin35/" target="_blank">
 	  <br>
-    <em id="git">LinkedIn</em>
+    <em id="git" class="fa fa-linkedin fa-fw" >LinkedIn</em>
   </a><br><br><br>
 </p>
 
@@ -256,7 +256,7 @@ I have developed projects using Java, C#, and Python. I am also advancing in web
   <b>Lecturer (IUE)</b><br>
   <a href="https://www.linkedin.com/in/turgay-zülam-600b322a1/" target="_blank">
 	  <br>
-    <em id="git">LinkedIn</em>
+    <em id="git" class="fa fa-linkedin fa-fw" >LinkedIn</em>
   </a><br><br><br>
 </p>
 
@@ -266,7 +266,7 @@ I have developed projects using Java, C#, and Python. I am also advancing in web
   <b>Lecturer (IEU)</b><br>
   <a href="https://www.linkedin.com/in/hüseyin-tokat-6682a012a/" target="_blank">
 	  <br>
-    <em id="git">LinkedIn</em>
+    <em id="git" class="fa fa-linkedin fa-fw" >LinkedIn</em>
   </a>
 </p>
 
