--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 					<br><br><br>
 					<h3>Hello Again</h3>
 					<p>
-I have a degree in Computer Programming and am continuing my academic career in the Management Information Systems program. I love learning something new about technology every day. Discovering new topics, delving deeper, and developing myself in different areas is both a passion and a form of entertainment for me. I don't limit myself to a single field; software development, web technologies, cybersecurity, and artificial intelligence are the topics that interest me the most. I am currently actively working and learning in these areas.
+I'm a graduate of Computer Programming and I'm continuing my academic life in the Management Information Systems department. I love learning something new about technology every day. For me, discovering new topics, delving deeper into them, and improving myself in different fields is both a passion and a form of entertainment. Software development, web technologies, cybersecurity, and artificial intelligence are the topics that interest me most. Currently, I'm actively focusing on, researching, and learning about these fields.
 
-I have developed projects using Java, C#, and Python. I am also advancing in web development using HTML, CSS, and JavaScript. On one hand, I am focusing on Linux systems and network security, while on the other, I am developing myself in artificial intelligence and machine learning.
+I have developed entry- and intermediate-level projects with Java, C#, and Python. I'm also progressing in web development by using HTML, CSS, and JavaScript. While I'm focusing on Linux proficiency and network security, I'm also broadening my horizons in artificial intelligence and machine learning by doing research in this field.
 					</p>
 					<br><br>
 				</div>
