--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<p>
 						<a href="https://drive.google.com/file/d/1kZylxE48-uYOn9pcyNjdj4l5x2dt4GpY/view?usp=sharing" class="btnghost" target="_blank"><i class="fa fa-download"></i> Resume </a>
 					</p>
-					<img src="img/vector.png" alt="me" class="myphoto">
+					<img src="img/brkpp.png" alt="me" class="myphoto">
 					<br><br><br>
 					<h3>Hello Again</h3>
 					<p>
@@ -154,6 +154,16 @@ I have developed entry- and intermediate-level projects with Java, C#, and Pytho
 						Information Technologies Intern <br><br> Aegean Region Chamber of Industry - İzmir - 07 October 2024 / 04 November 2024
 						<br><br>
 						During my internship at the Aegean Region Chamber of Industry, I received various training sessions on artificial intelligence technologies, which were a key focus of the company. Throughout this period, I gained both theoretical knowledge and hands-on experience by working on practical applications in the field.
+					</p>
+					<p>
+					</p>
+				</div>
+				<br><br><br><br>
+				<div class="col-lg-8 col-lg-offset-2">
+					<p>
+						Software Support Engineer <br><br> Dinçer Technology Security Software - İzmir - 12 January 2026 / Currently 
+						<br><br>
+						I manage technical operations, integration, and optimization processes in electronic security, access control, and personnel attendance control systems.
 					</p>
 					<p>
 					</p>
