--- a/index.html
+++ b/index.html
@@ -134,40 +134,34 @@ I have developed entry- and intermediate-level projects with Java, C#, and Pytho
 			<div class="row">
 				<h2>Sector Experince</h2>
 				<div class="col-lg-8 col-lg-offset-2">
-					<p>
-						Software Development Intern <br><br> İndas Technology - İzmir - 19 June 2023 / 20 July 2023
-						<br><br>
-						While interning at Indas Technology, I worked on the "Employee Automation" project, which is
-						showcased on my GitHub profile. In this project, I developed the back-end portion of an
-						automation system designed to manage employees in a company, using .NET Core and C#. Throughout
-						this process, I collaborated with other developers around me to investigate and resolve numerous
-						issues. Eventually, we produced a project incorporating concepts such as authorization and
-						health check, among others. The project was tested using the Swagger framework and confirmed to
-						be in a functional state.
-					</p>
-					<p>
-					</p>
-				</div>
-				<br><br><br><br>
-				<div class="col-lg-8 col-lg-offset-2">
-					<p>
-						Information Technologies Intern <br><br> Aegean Region Chamber of Industry - İzmir - 07 October 2024 / 04 November 2024
-						<br><br>
-						During my internship at the Aegean Region Chamber of Industry, I received various training sessions on artificial intelligence technologies, which were a key focus of the company. Throughout this period, I gained both theoretical knowledge and hands-on experience by working on practical applications in the field.
-					</p>
-					<p>
-					</p>
-				</div>
-				<br><br><br><br>
-				<div class="col-lg-8 col-lg-offset-2">
-					<p>
-						Software Support Engineer <br><br> Dinçer Technology Security Software - İzmir - 12 January 2026 / Currently 
-						<br><br>
-						I manage technical operations, integration, and optimization processes in electronic security, access control, and personnel attendance control systems.
-					</p>
-					<p>
-					</p>
-				</div>
+	<p>
+		Software Support Engineer <br><br> Dinçer Technology Security Software - İzmir - 12 January 2026 / Currently 
+		<br><br>
+		I manage technical operations, integration, and optimization processes in electronic security, access control, and personnel attendance control systems.
+	</p>
+	<p></p>
+</div>
+<br><br><br><br>
+
+<div class="col-lg-8 col-lg-offset-2">
+	<p>
+		Information Technologies Intern <br><br> Aegean Region Chamber of Industry - İzmir - 07 October 2024 / 04 November 2024
+		<br><br>
+		During my internship at the Aegean Region Chamber of Industry, I received various training sessions on artificial intelligence technologies, which were a key focus of the company. Throughout this period, I gained both theoretical knowledge and hands-on experience by working on practical applications in the field.
+	</p>
+	<p></p>
+</div>
+<br><br><br><br>
+
+<div class="col-lg-8 col-lg-offset-2">
+	<p>
+		Software Development Intern <br><br> İndas Technology - İzmir - 19 June 2023 / 20 July 2023
+		<br><br>
+		While interning at Indas Technology, I worked on the "Employee Automation" project, which is showcased on my GitHub profile. In this project, I developed the back-end portion of an automation system designed to manage employees in a company, using .NET Core and C#. Throughout this process, I collaborated with other developers around me to investigate and resolve numerous issues. Eventually, we produced a project incorporating concepts such as authorization and health check, among others. The project was tested using the Swagger framework and confirmed to be in a functional state.
+	</p>
+	<p></p>
+</div>
+
 			</div>
 		</div>
 	</section>
