--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
 					<br><br><br>
 					<h3>Hello Again</h3>
 					<p>
-I'm a graduate of Computer Programming and I'm continuing my academic life in the Management Information Systems department. I love learning something new about technology every day. For me, discovering new topics, delving deeper into them, and improving myself in different fields is both a passion and a form of entertainment. Software development, web technologies, cybersecurity, and artificial intelligence are the topics that interest me most. Currently, I'm actively focusing on, researching, and learning about these fields.
-
-I have developed entry- and intermediate-level projects with Java, C#, and Python. I'm also progressing in web development by using HTML, CSS, and JavaScript. While I'm focusing on Linux proficiency and network security, I'm also broadening my horizons in artificial intelligence and machine learning by doing research in this field.
+I graduated in Computer Programming and I'm currently studying Management Information Systems. I'm motivated by understanding how systems work, how data flows, and how different layers of technology interact.
+I'm interested in software development, system integration, networking and data-driven workflows. Currently, I work in the electronic security, access control and workforce attendance domain,
+focusing on technical operations and system integration. This includes onboarding devices into the system, aligning data flows with business logic and validating system behavior in real environments.
+I'm also exploring mobile development, especially within the iOS ecosystem, and aim to combine system-level understanding with application development in the future.
 					</p>
 					<br><br>
 				</div>
