--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ I'm also exploring mobile development, especially within the iOS ecosystem, and 
 				<h2>Education</h2>
 				<div class="col-lg-8 col-lg-offset-2">
 					<p>
-						Anadolu University <br> Management Information Systems <br> 2025 - ~
+						Anadolu University <br> Management Information Systems <br> 2025 - Currently
 					</p>
 					<p>
 						Izmir University of Economics <br> Computer Programming <br> 2022 - 2024
