--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ I'm also exploring mobile development, especially within the iOS ecosystem, and 
 	<p>
 		Software Support Engineer <br><br> Dinçer Technology Security Software - İzmir - 12 January 2026 / Currently 
 		<br><br>
-		I manage technical operations, integration, and optimization processes in electronic security, access control, and personnel attendance control systems.
+		I manage technical operations, integration, and optimization processes for electronic security, access control, and personnel attendance control systems, along with software and database layers.
 	</p>
 	<p></p>
 </div>
